<resources>
    <string name="app_name">ExchangeRateWeather</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>

    <string name="welcome">"Welcome!"</string>
    <string name="write_username">"Please write your username to login"</string>
    <string name="login">LOGIN</string>
    <string name="logo">logo</string>
    <string name="Username">Username</string>
    <string name="currency_exchange">Exchange rate for today</string>
    <string name="purchase">Purchase</string>
    <string name="sale">Sale</string>
    <string name="weatherInformation">Current weather information</string>
    <string name="currrentTemp">Temperature</string>
    <string name="condition">Condition</string>
    <string name="region">Region</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="Logout">Logout</string>
    <string name="error_text">An error occurred while loading data</string>
    <string name="cloudy">Cloudy</string>
    <string name="cr">TW</string>
    <string name="timeExample">5:00am</string>
    <string name="temperatureSample">24 C</string>
    <string name="exchangeSample">500.00</string>
</resources>