<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".ui.DetailFragment">

    <TextView
        android:id="@+id/lblUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textAlignment="center"
        android:textColor="#4E4E4E"
        android:textSize="32sp"
        android:textStyle="normal|bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/bg_rounded"
        android:layout_marginStart="@dimen/LRMargin"
        android:layout_marginEnd="@dimen/LRMargin"
        android:layout_marginTop="@dimen/LRMargin"
        android:layout_marginBottom="@dimen/LRMargin"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/lblUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_exchange"
            android:textSize="18sp"
            android:textColor="@color/light_grey"/>

        <LinearLayout
            android:id="@+id/lyPurchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/LRMargin">
            <TextView
                android:id="@+id/lblPurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detailFont"
                android:text="@string/purchase"/>

            <TextView
                android:id="@+id/txtPurchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detailFont"
                android:gravity="end"
                android:text="600.00"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lySale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/LRMargin">
            <TextView
                android:id="@+id/lblsale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detailFont"
                android:text="@string/sale"/>

            <TextView
                android:id="@+id/txtSale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detailFont"
                android:gravity="end"
                android:text="500.00"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/LRMargin"
            android:layout_marginEnd="@dimen/LRMargin"
            android:background="@color/color_divider"/>


    </LinearLayout>


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>